using only 1 function for disjoint functions

--- a/Tests_Final/Ch03/Coverage_Report/Non_commented_Code/Disjoint/index.html
+++ b/Tests_Final/Ch03/Coverage_Report/Non_commented_Code/Disjoint/index.html
@@ -45,7 +45,7 @@
         </form>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.0">coverage.py v7.3.0</a>,
-            created at 2023-08-30 07:52 -0500
+            created at 2023-09-02 08:45 -0500
         </p>
     </div>
 </header>
@@ -63,10 +63,17 @@
         <tbody>
             <tr class="file">
                 <td class="name left"><a href="d_0deb12c01936a241_test_disjoint_py.html">Tests_Final\Ch03\test_disjoint.py</a></td>
-                <td>33</td>
+                <td>28</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="33 33">100%</td>
+                <td class="right" data-ratio="28 28">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_0533912b7d7e47be_disjoint_py.html">ch03\No_Comments\disjoint.py</a></td>
+                <td>7</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="7 7">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_214eee6718f70eba___init___py.html">ch03\__init__.py</a></td>
@@ -75,21 +82,14 @@
                 <td>0</td>
                 <td class="right" data-ratio="1 1">100%</td>
             </tr>
-            <tr class="file">
-                <td class="name left"><a href="d_214eee6718f70eba_disjoint_py.html">ch03\disjoint.py</a></td>
-                <td>15</td>
-                <td>0</td>
-                <td>0</td>
-                <td class="right" data-ratio="15 15">100%</td>
-            </tr>
         </tbody>
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>49</td>
+                <td>36</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="49 49">100%</td>
+                <td class="right" data-ratio="36 36">100%</td>
             </tr>
         </tfoot>
     </table>
@@ -101,11 +101,11 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.0">coverage.py v7.3.0</a>,
-            created at 2023-08-30 07:52 -0500
+            created at 2023-09-02 08:45 -0500
         </p>
     </div>
     <aside class="hidden">
-        <a id="prevFileLink" class="nav" href="d_214eee6718f70eba_disjoint_py.html"/>
+        <a id="prevFileLink" class="nav" href="d_214eee6718f70eba___init___py.html"/>
         <a id="nextFileLink" class="nav" href="d_0deb12c01936a241_test_disjoint_py.html"/>
         <button type="button" class="button_prev_file" data-shortcut="["/>
         <button type="button" class="button_next_file" data-shortcut="]"/>
